--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <button id="play-music" class="hidden">
-      <i id="pauseButton" class="fa-sharp fa-solid fa-pause"></i>
+      <i id="pauseButton" class="fa-sharp fa-solid fa-play"></i>
     </button>
     <label id="lbl-resposta" for="resposta" class="hidden">Qual é a música?</label>
     <input type="text" id="resposta" class="hidden">
